[tool.poetry]
name = "reflexion"
version = "0.1.0"
description = ""
authors = ["kargarisaac <kargarisaac@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
smolagents = {extras = ["litellm"], version = "^1.11.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
